<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="26dp"
        android:paddingEnd="24dp">

        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_number" />

        <EditText
            android:id="@+id/edt_phone_number"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_phone_number"
            android:inputType="phone"
            android:padding="10dp" />


        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/tv_address" />

        <EditText
            android:id="@+id/edt_address"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_address"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/tv_house_no" />

        <EditText
            android:id="@+id/edt_house_no"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_house_no"
            android:inputType="text"
            android:padding="10dp" />


        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/tv_city" />

        <EditText
            android:id="@+id/edt_city"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_city"
            android:inputType="text"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_sign_up"
            android:textAllCaps="false" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>