<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="#fff"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="26dp"
        android:paddingEnd="24dp">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_picture_empty" />

        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_full_name" />

        <EditText
            android:id="@+id/edt_full_name"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_full_name"
            android:inputType="text"
            android:padding="10dp" />


        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/tv_email_address" />

        <EditText
            android:id="@+id/edt_email_address"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/tv_password" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/EditText.PoppinsNormalSz16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>